Add first solution of problem 46
I will travel to all the array trying to add a new number to the permutation. If a number is added, then I will perform recursion to add another number and so on